fix spacing above page header on mobile

--- a/css/johnson/_navigation.scss
+++ b/css/johnson/_navigation.scss
@@ -24,6 +24,8 @@
 	margin-bottom: 1em;
 }
 .navbar {
+	margin-bottom: 0;
+	padding-bottom: 20px;
 	.nav {
 		margin-top: 1em;
 		li {
