--- a/css/style.css
+++ b/css/style.css
@@ -7166,22 +7166,25 @@ footer {
   font-style: italic;
   margin-bottom: 1em; }
 
-.navbar .nav {
-  margin-top: 1em; }
-  .navbar .nav li {
-    font-size: 16px;
-    text-transform: uppercase;
-    margin-right: .25em;
-    float: left; }
-    .navbar .nav li a {
-      color: #333;
-      text-decoration: none;
-      background: white;
-      background: rgba(255, 255, 255, 0.9); }
-      .navbar .nav li a i {
-        font-size: 14px;
-        color: #999;
-        margin-left: 5px; }
+.navbar {
+  margin-bottom: 0;
+  padding-bottom: 20px; }
+  .navbar .nav {
+    margin-top: 1em; }
+    .navbar .nav li {
+      font-size: 16px;
+      text-transform: uppercase;
+      margin-right: .25em;
+      float: left; }
+      .navbar .nav li a {
+        color: #333;
+        text-decoration: none;
+        background: white;
+        background: rgba(255, 255, 255, 0.9); }
+        .navbar .nav li a i {
+          font-size: 14px;
+          color: #999;
+          margin-left: 5px; }
 
 .navbar-toggle {
   font-size: 16px;
